--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../src/photos/logowg.ico"/>
+    <link rel="icon" type="image/x-icon" href="logowg.ico"/>
     <!-- Theme color for toolbar color -->
     <meta name="theme-color" content="#007769">
     <!-- Manifest for adding as a shortcut for Android -->
